--- a/nft-market/package.json
+++ b/nft-market/package.json
@@ -17,7 +17,9 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "react-scripts": "^4.0.3",
     "stream-http": "^3.2.0",
     "web-vitals": "^2.1.4"
